Fix: Wrong font in hiscore input

--- a/css/index.css
+++ b/css/index.css
@@ -114,11 +114,11 @@ body {
     -o-animation-name: spin;
     animation-name: spin;
     
-    -webkit-animation-duration: 0.6s;
-    -moz-animation-duration: 0.6s;
-    -ms-animation-duration: 0.6s;
-    -o-animation-duration: 0.6s;
-    animation-duration: 0.6s;
+    -webkit-animation-duration: 0.4s;
+    -moz-animation-duration: 0.4s;
+    -ms-animation-duration: 0.4s;
+    -o-animation-duration: 0.4s;
+    animation-duration: 0.4s;
     
     -webkit-animation-iteration-count: infinite;
     -moz-animation-iteration-count: infinite;
@@ -178,7 +178,8 @@ body {
     background: transparent;
     color: white;
     cursor: text;
-    font-size: 1em;
+    font-family: inherit;
+    font-size: inherit;
     width: 100%;
 
     -webkit-touch-callout: default;
